Fixes spacing of foldable card to match other settings cards for now (#6840)

--- a/_inc/client/components/settings-card/style.scss
+++ b/_inc/client/components/settings-card/style.scss
@@ -58,6 +58,13 @@
 			padding-top: rem( 7px );
 		}
 	}
+
+	.dops-foldable-card__header {
+		@include breakpoint ( '>480px' ) {
+			padding-top: rem( 28px );
+			padding-bottom: rem( 28px );
+		}
+	}
 }
 
 .jp-foldable-settings-standalone {
